apps/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
  labels:
    app: homepage
    app.kubernetes.io/name: homepage
  annotations:
    backstage.io/component: homepage
spec:
  replicas: 1
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
        app.kubernetes.io/name: homepage
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: homepage
          image: harbor.208.haist.farm/sentinel/homepage@sha256:591d05e9b98924dfe64bee09a823d4361523304ae58b42be034bcdfd0c46024c
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config
              mountPath: /app/config
            - name: tmp
              mountPath: /tmp
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            periodSeconds: 10
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 5"]
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
      volumes:
        - name: config
          emptyDir: {}
        - name: tmp
          emptyDir: {}
        - name: config-settings
          configMap:
            name: homepage-settings
        - name: config-services
          configMap:
            name: homepage-services
        - name: config-widgets
          configMap:
            name: homepage-widgets
        - name: config-bookmarks
          configMap:
            name: homepage-bookmarks
