apps/homepage/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: homepage
  namespace: homepage
spec:
  host: home.208.haist.farm
  to:
    kind: Service
    name: homepage
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
